[metadata]
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
version = 0.0.1
description = Python test utils
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = tested
display_name = tested

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
		

